GUI (#68)
Co-authored-by: falcro02 <alessio.caggiano@gmail.com>
Co-authored-by: matteobettiati <matteo.bet.38@gmail.com>